# WebScraper

./: Dockerfile  README.md  pyproject.toml  results.csv  scraper.py  test_scraper.py
